# MM-Video

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
configs/: config.yaml
examples/mnist/: MANIFEST.in  RAEDME.md  pyproject.toml
examples/mnist/configs/: config.yaml
examples/mnist/configs/experiments/: run_ddp.yaml  run_fsdp.yaml
examples/mnist/mnist/: __init__.py  dataset.py  main.py  modeling.py
hydra_plugins/mm_video/: mm_video.py
hydra_plugins/mm_video/configs/: mm_video_default_log.yaml  mm_video_distributed_log.yaml  mm_video_template.yaml
hydra_plugins/mm_video_base/: mm_video_base.py
hydra_plugins/mm_video_base/configs/: mm_video.yaml
hydra_plugins/mm_video_base/configs/paths/: README.md
mm_video/: __init__.py
mm_video/config/: __init__.py  base_config.py  registry.py
mm_video/config/compat/: __init__.py  _common.py  peft.py  transformers.py  trl.py
mm_video/data/: __init__.py  loader.py
mm_video/modeling/: __init__.py  meter.py  model.py  optimizer.py  scheduler.py
mm_video/modeling/common/: __init__.py
mm_video/runner/: __init__.py  runner.py
mm_video/tools/: checkpoint_tweak.py
mm_video/trainer/: __init__.py  base_trainer.py  trainer.py  trainer_utils.py  training_configs.py
mm_video/trainer/hf_trainer/: __init__.py  training_arguments.py
mm_video/utils/: checkpoint.py  data.py  distributed.py  json.py  logging.py  plot.py  profile.py  train_utils.py
mm_video/utils/common/: __init__.py  data.py  debug.py  distributed.py  json.py  path.py  plot.py  registry.py  time.py  train_utils.py  writer.py
mm_video/utils/language/: __init__.py  generate.py
mm_video/utils/vision/: __init__.py  image.py  video.py  visualize.py
test/config/compat/: test_huggingface.py  test_peft.py
test/hydra_plugins/: test_mm_video.py
test/mm_video/config/: __init__.py  test_base_config.py
test/mm_video/config/compat/: __init__.py  test_transformers.py  test_trl.py
test/mm_video/trainer/: __init__.py  test_trainer.py
test/mm_video/utils/: __init__.py  test_plot.py
test/mm_video/utils/common/: __init__.py  test_debug.py  test_plot.py
test/mm_video/utils/language/: test_generate.py
test/trainer/: test_trainer.py
