[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mm-video"
version = "0.2.1"
description = "A lightweight and flexible training framework with highly strcutured configuration system based on Hydra"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    # configuration
    "omegaconf", "hydra-core", "hydra-zen", "colorlog",
    # basic
    # deep learning
    "torch>=2.0.0", "torchvision",
    "einops",
    "numpy", "pandas",
    "pillow", "opencv-python",
    # others
    "fire",
    "tensorboard",
    "tqdm",
    "joblib>=1.3.0",
    "tabulate",
    "xopen"
]

[tool.setuptools.packages.find]
exclude = ["test*", "model_zoo*", "dataset*", "configs*", "scripts*", "tools*", "examples*"]

[tool.whell]
exclude = ["test*", "model_zoo*", "dataset*", "configs*", "scripts*", "tools*", "examples*"]