[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mm-video"
version = "0.4.0"
description = "A lightweight and flexible training framework with highly strcutured configuration system based on Hydra"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    # configuration
    "omegaconf", "hydra-core>=1.3.2", "hydra-zen", "colorlog",
    # basic
    # deep learning
    "torch>=2.0.0", "torchvision",
    "einops",
    "numpy", "pandas",
    "pillow", "opencv-python",
    # others
    "fire",
    "tensorboard",
    "tqdm",
    "joblib>=1.3.0",
    "tabulate",
    "xopen",
    "matplotlib"
]

[project.optional-dependencies]
# These optional dependencies use the tested versions. Other versions might be supported but are not tested.
compat_transformers = ["transformers>=4.37.0,<4.42.0"]
compat_peft = ["peft==0.10.0"]
compat_trl = ["trl>=0.9.0,<0.10.0"]

[tool.setuptools.packages.find]
exclude = ["test*", "model_zoo*", "dataset*", "configs*", "scripts*", "tools*", "examples*"]

[tool.whell]
exclude = ["test*", "model_zoo*", "dataset*", "configs*", "scripts*", "tools*", "examples*"]