[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mm-video"
version = "0.5.0"
description = "A lightweight and flexible training framework with highly strcutured configuration system based on Hydra"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    # configuration
    "omegaconf", "hydra-core>=1.3.2", "hydra-zen", "colorlog",
    # main dependencies
    "torch>=2.0.0",
    "torchvision",
    "numpy",
    "tensorboard",
    "tqdm"
]

[project.optional-dependencies]
utils_common = ["matplotlib", "pandas", "pillow", "tabulate", "xopen"]
utils_vision = ["opencv-python", "joblib>=1.3.0"]
utils_language = ["transformers", "vllm", "peft", "ray", "pydantic"]
tools = ["fire"]
test = ["pytest", "pytest-cov"]

[tool.setuptools.packages.find]
exclude = ["test*", "model_zoo*", "dataset*", "configs*", "scripts*", "tools*", "examples*"]

[tool.whell]
exclude = ["test*", "model_zoo*", "dataset*", "configs*", "scripts*", "tools*", "examples*"]